--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- <title>A Digital CV</title> -->
      <!-- Link to external CSS file -->
     <link rel="stylesheet" href="cv_exercise.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   
     <header>
@@ -56,8 +56,8 @@
         </tr>
   </tbody>
 </table>
-<hr>
 
+<br>
 <h2>Projects</h2>
 <h4>Network Evaluation</h4>
 
