--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <br>
 
 <h2>Education</h2>
-<p><b>Kenzie Academy from Southern New Hampshire University</b>-<i>Cybersecurity</i></p>
+<p class="secondary"><b>Kenzie Academy from Southern New Hampshire University</b>-<i>Cybersecurity</i></p>
 
 <table>
     <caption>SKILLS</caption>
