changed background img

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   
     <header>
-        <img src="Photo.JPG" alt="Maylene Flores" class="circle-image" height="200">
+      <img src="Photo.JPG" alt="Maylene Flores" class="circle-image" height="200">
         <div class="header-text">
         <a href="mailto: floresmk.015@gmail.com" style="color:rgb(255, 0, 0);"><i>floresmk.015@gmail.com</i></a>
         <a href="https://www.linkedin.com/in/maylene-flores-b970b9172/" target="_blank" style="color:rgb(255, 0, 0);">LinkedIn</a>
@@ -18,7 +18,9 @@
 <h1>Maylene Flores</h1>
 
 <body>
-    
+    <video autoplay muted loop playsinline id="bg-video">
+        <source src="cyber.mp4" type="video/mp4">
+    </video>
     <h2>Summary</h2>
     <p>Driven professional with experience in leading others to work well as a team. Enthusiastic to apply recent studies in Cybersecurity and utilize computer networking skills to improve the security of computer systems.</p>
 <br>
