changed list id to class

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 <h4>Network Evaluation</h4>
 
 <div id="list-image">
-    <img src="network-evaluation.JPG" alt="Network Evaluation" id="side-image"/>
-    <ul id="project-list">
+    <img src="network-evaluation.JPG" alt="Network Evaluation" class="side-image"/>
+    <ul class="project-list">
         <li>Listed computer and network devices that have an IP address assigned to it.</li>
         <li>Developed a diagram of the network to identify where devices such as routers and IoT reside.</li>
         <li>Detail the method of IP configuration, the physical access controls, and how access to devices are being controlled.</li>
